# gerene

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  config.cpp.in  config.hpp  gene.cpp  gene.hpp  individual.cpp  individual.hpp  main.cpp  population.cpp  population.hpp  program.cpp  program.hpp
test/: CMakeLists.txt  gene.cpp  individual.cpp  population.cpp
